fix: enforce immutability